--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <title>About Us</title>
 <style>
 body {
-  font-family: Arial, sans-serif;
+  font-family: Times new Roman, sans-serif;
   margin: 0;
   padding: 0;
   background-color: lavender;
