--- a/form.html
+++ b/form.html
@@ -81,8 +81,12 @@
   <select id="language" name="language" ng-model="formData.language" required>
     <option value="select"></option>
     <option value="english">English</option>
-    <option value="spanish">Spanish</option>
+    <option value="Japnese">Japanese</option>
     <option value="french">French</option>
+    <option value="Korean">Korean</option>
+    <option value="Chinese">Chinese</option>
+      
+      
   </select>
 
   <label for="state">State:</label>
