--- a/form.html
+++ b/form.html
@@ -81,8 +81,10 @@
   <select id="language" name="language" ng-model="formData.language" required>
     <option value="select"></option>
     <option value="english">English</option>
-    <option value="spanish">Spanish</option>
+    <option value="Japanese">Japanese</option>
     <option value="french">French</option>
+    <option value="korean">Korean</option>
+    <option value="chinese">Chinnese</option>
   </select>
 
   <label for="state">State:</label>
